terraform/lecture/main.tf
provider "aws" {
  access_key = "${var.access_key}"
  secret_key = "${var.secret_key}"
  region = "sa-east-1"
}

# SSH public key
resource "aws_key_pair" "ryosan-key" {
  key_name = "ryosan-key"
  public_key = "${var.ryosan-key}"
}

# instance
resource "aws_instance" "server" {
  ami = "ami-4090f22c"
  instance_type = "t2.micro"
  subnet_id = "${aws_subnet.subnet-1.id}"
  key_name = "ryosan-key"
  associate_public_ip_address = false
  vpc_security_group_ids = [
    "${aws_security_group.terraform-asg.id}"
  ]

  private_ip = "10.0.1.10"
  tags = {
    Name = "terraform"
  }
}

resource "aws_eip" "lb" {
  instance = "${aws_instance.server.id}"
  associate_with_private_ip = "10.0.1.10"
  vpc = true
}

# VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "terraform"
  }
}

# subnet
resource "aws_subnet" "subnet-1" {
  vpc_id = "${aws_vpc.main.id}"
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "terraform"
  }
}

resource "aws_subnet" "subnet-2" {
  vpc_id = "${aws_vpc.main.id}"
  cidr_block = "10.0.2.0/24"

  tags = {
    Name = "terraform"
  }
}

# internet gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = "${aws_vpc.main.id}"

  tags = {
    Name = "terraform"
  }
}

# route table
resource "aws_route_table" "public-rt" {
  vpc_id = "${aws_vpc.main.id}"
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.igw.id}"
  }
}

resource "aws_route_table_association" "vpc-rt-1" {
  subnet_id = "${aws_subnet.subnet-1.id}"
  route_table_id = "${aws_route_table.public-rt.id}"
}

resource "aws_route_table_association" "vpc-rt-2" {
  subnet_id = "${aws_subnet.subnet-2.id}"
  route_table_id = "${aws_route_table.public-rt.id}"
}

resource "aws_security_group" "terraform-asg" {
  name = "terraform-asg"
  vpc_id = "${aws_vpc.main.id}"
  description = "Default security group"

  ingress = {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = "${var.permit_ip_list}"
  }

  ingress = {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress = {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress = {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "terraform"
  }
}
